@@ -3193,11 +3193,13 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.10.3:
 
--Misc. UX / compatibility improvements
+-Misc. small bug fixes and UX / compatibility improvements
 
 -Microsoft Internet Explorer bug fixed, where log viewing / code examples were not rendering properly
 
 -Market pairing value function bug fixed, where under certain edge cases could make the cron job runtime excessively long
+
+-Initial app config auto-upgrading system (for cached user-customized app config in upcoming admin interface settings)
 
 -Code cleanup (semantics)
 
